# PinballMachine

./: CMakeLists.txt  README.md
resources/models/: Ball.mtl  Bumper.mtl  Earth.mtl  Inador.blend  Inador_Base.mtl  Inador_Cuerpo.mtl  Inador_Punta.mtl  Moon.mtl  Perry_Foot.mtl  Perry_Hand.mtl  Perry_Hat.mtl  Perry_Leg.mtl  Perry_Shoulder.mtl  Perry_Tail.mtl  Perry_Trunk.mtl  Pinball_Cover.mtl  Pinball_Lever.mtl  Rocket.mtl  Spring.mtl  bouncer.blend  bouncer.mtl
resources/shaders/: shader_light.frag
resources/textures/: X.tga  bouncer.tga  grey.tga  inador.tga  luna.tga  metal.tga  panel_atras.tga  panel_derecho.tga  panel_frontal.tga  panel_izquierdo.tga  perry.tga  personaje0.tga  personaje1.tga  personaje2.tga  personaje3.tga  personaje4.tga  personaje5.tga  personaje6.tga  personaje7.tga  personaje8.tga  personaje9.tga  point.tga  ranura.tga  referenciasTexturas.txt  resize.py  tierra.tga
src/: main.cpp  p10.cpp
src/animations/: BallAnimation.cpp  BallKeyframeAnimation.cpp  InadorAnimacion.cpp  InadorAnimation.cpp  PerryAnimation.cpp
src/audio/: Buffer.cpp  Device.cpp  EnvironmentAudioController.cpp  Listener.cpp  Source.cpp  SpringAudioController.cpp
src/components/: Ball.cpp  Bouncer.cpp  Bumper.cpp  CameraToggleController.cpp  Earth.cpp  Flipper.cpp  FlipperKeyController.cpp  Inador.cpp  LightManager.cpp  Perry.cpp  Pinball.cpp  Rocket.cpp  SkyboxManager.cpp  Spring.cpp  SpringMouseController.cpp
src/helpers/: Camera.cpp  DirectionalLight.cpp  Inador.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  PointLight.cpp  Shader.cpp  Skybox.cpp  SpotLight.cpp  Texture.cpp  Window.cpp
src/include/: ArrowTexture.h  Ball.h  BallAnimation.h  BallKeyframeAnimation.h  BangTexture.h  Bouncer.h  Buffer.h  Bumper.h  Camera.h  CameraToggleController.h  CommonValues.h  Device.h  DirectionalLight.h  Earth.h  EnvironmentAudioController.h  Flipper.h  FlipperKeyController.h  Inador.h  InadorAnimation.h  Light.h  LightManager.h  Listener.h  Material.h  Mesh.h  Model.h  Perry.h  PerryAnimation.h  Pinball.h  PointLight.h  PointTexture.h  Rocket.h  Shader.h  Skybox.h  SkyboxManager.h  Source.h  SpotLight.h  Spring.h  SpringAudioController.h  SpringMouseController.h  Texture.h  (+4 more)
src/textures/: ArrowTexture.cpp  BangTexture.cpp  PointTexture.cpp  XTexture.cpp
